<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="reduced_app_name">Tomador de notas</string>
    <string name="app_name">Aplicativo tomador de notas</string>
    <string name="whatYouWantToDo">O que deseja fazer?</string>
    <string name="createANote">Criar uma nota</string>
    <string name="takeAPicture">Tirar uma foto</string>
    <string name="recordAnAudio">Gravar um áudio</string>
    <string name="seeNotes">Ver as notas existentes</string>
    <string name="seeANote">Ver nota</string>
    <string name="title">Título</string>
    <string name="text">Texto</string>
    <string name="save">Salvar</string>
    <string name="confirm">Tem certeza?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="saved">Nota foi salva com sucesso!</string>
    <string name="willTakeAPicture">Na próxima versão, irá tirar uma foto!</string>
    <string name="willRecordAnAudio">Na próxima versão, irá gravar um áudio!</string>
    
    <string name="textTitle">Descobrir o quark</string>
    <string name="textText">Usando a teoria de Einsten, é possível obter uma partícula menor que um átomo.</string>
    
    <string-array name="notes_array">
        <item>Descobrir o quark</item>
        <item>Inventar o carro voador</item>
        <item>Estudar levitação</item>
    </string-array>

</resources>